k8s/semana4-app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: semana4-service
  namespace: semana4-app
spec:
  selector:
    app: semana4-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
